server/public/styles/styles.css
.stroke {
  text-shadow:
       3px 3px 0 #000,
     -1px -1px 0 #000,
      1px -1px 0 #000,
      -1px 1px 0 #000,
       1px 1px 0 #000;
}

body, html {
  height: 100%;
}

div {
  text-align: left;
  font-size: 54px;
  padding-top: 125px;
  padding-left: 10px;
  color: lightblue;
  font-family: AppleGothic;
  font-weight: lighter;
}

p {
  margin: 0;
  padding: 50px;
  text-align: center;
  background-color: lightblue;
  font-size: 36px;
  font-family: 'cochin';
}

.p2 {
  height:225px;
}

.p3 {
  height:800px
}

.parallax {
  /* The image used */
  background-image: url("/images/ibc_bg.jpg");

  /* Full height */
  height: 100%;

  /* Create the parallax scrolling effect */
  background-attachment: fixed;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
}
.parallax2 {
  /* The image used */
  background-image: url("/images/fd_background.png");

  /* Full height */
  height: 100%;

  /* Create the parallax scrolling effect */
  background-attachment: fixed;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
}
.parallax3 {
  /* The image used */
  background-image: url("/images/MO_background.jpg");

  /* Full height */
  height: 100%;

  /* Create the parallax scrolling effect */
  background-attachment: fixed;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
}

